Covering AnalyticRepository with tests on aggregation